classDiagram
    class User {
        +UUID id
        +String email
        +String hashed_password
        +bool is_active
        +List favorites
    }

    class Stock {
        +String symbol
        +String company_name
        +Float price
        +DateTime last_updated
    }

    class ForecastResult {
        +UUID id
        +String task_id
        +String prediction_token
        +Float confidence
        +String reasoning
        +String divergence_type
        +DateTime created_at
    }

    class MarketData {
        +DateTime date
        +String symbol
        +Float close_price
        +String neuro_token
    }

    User "1" --> "*" ForecastResult : initiates
    Stock "1" --> "*" ForecastResult : target
    Stock "1" --> "*" MarketData : historical_context